Create profileWriter and schema, property, header enum definitions
