# isa2-messaging-profile-impl/src/main/java/eu/europa/ec/isa2/restapi/profile/enums/MessagingReferenceType.java
@@ -1,30 +1,36 @@
 package eu.europa.ec.isa2.restapi.profile.enums;
 
+import static eu.europa.ec.isa2.restapi.profile.enums.SpecificationPartType.CORE_PROFILE;
+import static eu.europa.ec.isa2.restapi.profile.enums.SpecificationPartType.MESSAGING_PROFILE;
+
 public enum MessagingReferenceType {
 
-    ORIGINAL_SENDER("Original-Sender", "messaging-api-specification","original-sender.json"),
-    FINAL_RECIPIENT("Final-Recipient", "messaging-api-specification","final-recipient.json"),
-    TIMESTAMP("Timestamp", "messaging-api-specification","timestamp.json"),
-    EDEL_MESSAGE_SIG("Edel-Message-Sig", "api-core-profile","edel-message-sig.json"),
-    EDEL_PAYLOAD_SIG("Edel-Payload-Sig", "api-core-profile","edel-payload-sig.json"),
-    RESPONSE_WEBHOOK("Response-Webhook", "messaging-api-specification","response-webhook.json"),
-    SIGNAL_WEBHOOK("Signal-Webhook","messaging-api-specification","signal-webhook.json"),
-    MESSAGE_ID("messageId", "messaging-api-specification","message-id.json"),
-    SERVICE("Service","messaging-api-specification","service.json"),
-    ACTION("Action","messaging-api-specification","action.json"),
-    RESPONSE_MESSAGE_ID("rMessageId","messaging-api-specification","response-message-id.json"),
-    RESPONSE_SERVICE("rService","messaging-api-specification","response-service.json"),
-    RESPONSE_ACTION("rAction", "messaging-api-specification","response-action.json"),
-    PROBLEM("Problem", "api-core-profile","problem.json"),
-    SIGNAL_MESSAGE("SignalMessage", "messaging-api-specification","signal-message.json"),
-    MESSAGE_REFERENCE("MessageReference", "messaging-api-specification","message-reference.json"),
-    MESSAGE_REFERENCE_LIST("MessageReferenceList", "messaging-api-specification","message-reference-list.json");
+    ORIGINAL_SENDER("Original-Sender", MESSAGING_PROFILE,"original-sender.json"),
+    FINAL_RECIPIENT("Final-Recipient", MESSAGING_PROFILE,"final-recipient.json"),
+    TIMESTAMP("Timestamp", MESSAGING_PROFILE,"timestamp.json"),
+    EDEL_MESSAGE_SIG("Edel-Message-Sig", CORE_PROFILE,"edel-message-sig.json"),
+    EDEL_PAYLOAD_SIG("Edel-Payload-Sig", CORE_PROFILE,"edel-payload-sig.json"),
+    RESPONSE_WEBHOOK("Response-Webhook", MESSAGING_PROFILE,"response-webhook.json"),
+    SIGNAL_WEBHOOK("Signal-Webhook", MESSAGING_PROFILE,"signal-webhook.json"),
+    MESSAGE_ID("messageId", MESSAGING_PROFILE,"message-id.json"),
+    SERVICE("Service", MESSAGING_PROFILE,"service.json"),
+    ACTION("Action", MESSAGING_PROFILE,"action.json"),
+    RESPONSE_MESSAGE_ID("rMessageId", MESSAGING_PROFILE,"response-message-id.json"),
+    RESPONSE_SERVICE("rService", MESSAGING_PROFILE,"response-service.json"),
+    RESPONSE_ACTION("rAction", MESSAGING_PROFILE,"response-action.json"),
+    PROBLEM("Problem", CORE_PROFILE,"problem.json"),
+    SIGNAL_MESSAGE("SignalMessage", MESSAGING_PROFILE,"signal-message.json"),
+    MESSAGE_REFERENCE("MessageReference", MESSAGING_PROFILE,"message-reference.json"),
+    MESSAGE_REFERENCE_LIST("MessageReferenceList", MESSAGING_PROFILE,"message-reference-list.json"),
+    JWS_COMPACT("jws-compact", MESSAGING_PROFILE,"jws-compact.json"),
+    JWS_COMPACT_DETACHED("jws-compact-detached", CORE_PROFILE,"jws-compact-detached.json");
+
 
 
     String name;
-    String specificationPart;
+    SpecificationPartType specificationPart;
     String objectURIDefinition;
-    MessagingReferenceType(String name, String specificationPart, String definitionSubContext
+    MessagingReferenceType(String name, SpecificationPartType specificationPart, String definitionSubContext
     ) {
         this.name = name;
         this.objectURIDefinition = definitionSubContext;
@@ -44,7 +50,8 @@ public enum MessagingReferenceType {
         return objectURIDefinition;
     }
 
-    public String getSpecificationPart() {
+    public SpecificationPartType getSpecificationPart() {
         return specificationPart;
     }
+
 }
